[project]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "scikit-learn>=1.8.0",
    "cupy-cuda13x>=13.0",
    "numpy>=2.2.0",
    "mkinit>=1.2.0",
]

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genetic"]
